Update package name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "advanced-trading-statistics",
+  "name": "@miryasha/advanced-trading-statistics",
   "version": "1.0.0",
   "description": "Advanced statistical analysis tools for trading and financial data",
   "main": "src/index.js",
